ingress/ingress-rules-kubeshark.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  creationTimestamp: null
  labels:
    kubeshark-cli-version: v1
    kubeshark-created-by: kubeshark
    kubeshark-managed-by: kubeshark
  name: kubeshark-ingress
  namespace: 'kubeshark'
spec:
  ingressClassName: kubeshark-ingress-class
  rules:
    - host: 'kubeshark.mycompany.com'
      http:
        paths:
          - backend:
              service:
                name: kubeshark-hub
                port:
                  number: 80
            path: /api(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: kubeshark-front
                port:
                  number: 80
            path: /()(.*)
            pathType: Prefix
